# botansqlite3

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
lib/: CMakeLists.txt  codec.cpp  codec.h  codec_interface.cpp  codec_interface.h  codecext.c  sqlite3-amalgamation.patch
test/: CMakeLists.txt  test_sqlite.cpp
